k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-service
  namespace: poker
  labels:
    app: poker
spec:
  selector:
    app: poker
  ports:
  - port: 80
    targetPort: 3000
    name: http
  type: ClusterIP
