k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poker-ingress
  namespace: poker
  annotations:
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - poker.germainleignel.com
      secretName: poker-tls
  rules:
    - host: poker.germainleignel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poker-service
                port:
                  number: 80
